# requirements-to-uv

./: .gitignore  CONTRIBUTING.md  README.md  TESTING.md  pyproject.toml
src/requirements_to_uv/: __init__.py  cli.py  converter.py  detector.py  merger.py  parser.py  prompts.py  validator.py
tests/: __init__.py  conftest.py  test_converter.py  test_integration_real_projects.py  test_parser.py
tests/fixtures/: requirements_complex.txt  requirements_simple.txt
